Added functionality to delete todo items
